

23.02
+ fixed and readded yii2 console

22.02.2017

x fix sync triger on cover update
+ added ability to save cover from browser clipboard
+ returned back phpinfo