@@ -14,7 +14,7 @@ return [
 	'bootstrap' => [
 		[ 'class' => 'app\components\MyLibraryBootstrap' ],
 		'log',
-	//	'debug'
+  	'debug'
 	/*
 		[	'class' => 'yii\filters\ContentNegotiator',
 			//'only' => ['view'],
@@ -36,7 +36,7 @@ return [
 	'modules' => [
 		//'apc' => [ 'class' => 'modules\apc\Module' ],
 		//'gii' => [ 'class' => 'yii\gii\Module' ],
-		//'debug' => [ 'class' => 'yii\debug\Module']
+		'debug' => [ 'class' => 'yii\debug\Module']
 	],
 	'components' => [
 		'security' => [
