@@ -4,24 +4,16 @@
 	"description" : "my book library",
 	"license" : "GPL-3.0",
 	"minimum-stability" : "stable",
-	"::COMMENT REPLACE::" : "it doesn't replace anything, it just removes dependencies on useless yii2 req stuff",
-	"replace" : {
-		"fxp/composer-asset-plugin" : "*",
-		"bower-asset/jquery" : "*",
-		"bower-asset/jquery.inputmask" : "*",
-		"bower-asset/punycode" : "*",
-		"bower-asset/yii2-pjax" : "*",
-		"bower-asset/bootstrap" : "*"
-	},
 	"require" : {
 		"php" : ">=5.6",
 		"yiisoft/yii2" : "~2.0",
-		"yiisoft/yii2-swiftmailer" : "~2.0"
+		"yiisoft/yii2-debug": "~2.0.0",
+		"yiisoft/yii2-swiftmailer" : "~2.0"		
 	},
 	"require-dev" : {
-		"phpunit/phpunit" : "5.6",
+		"phpunit/phpunit" : "5.7",
 		"phpunit/dbunit" : "*",
-		"mikey179/vfsStream" : "1.5.0@stable",
+		"mikey179/vfsStream" : "~1.5",
 		"facebook/webdriver" : "*"
 	}
 }
